Enhance find command to find multiple task types